--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,24 @@
   padding: 20px;
   background-color: darksalmon;
 }
+
+.task {
+  font-weight: bold;
+}
+
+.task-done {
+  font-weight: normal;
+  text-decoration: line-through;
+}
+
+.btn_active {
+  background-color: cornflowerblue;
+  color: #fff;
+  border: 2px solid cornflowerblue;
+  border-radius: 3px;
+}
+
+.input_error {
+  outline: none;
+  border: 2px solid #c07ba5;
+}
